--- a/VlineTimetableApk/res/layout/main.xml
+++ b/VlineTimetableApk/res/layout/main.xml
@@ -1,7 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content" >
+    <TableRow>
+		 <ScrollView
+		     android:layout_width="fill_parent"
+		     android:layout_height="fill_parent"
+		     android:layout_weight="1"
+		     android:scrollbars="none|horizontal|vertical" >
 
-</LinearLayout>
+	        <TableLayout
+	            android:id="@+id/results_table"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"
+	            android:paddingTop="10dp" >
+	        </TableLayout>
+	  	</ScrollView>
+    </TableRow>
+</TableLayout>
